tests/samples/invalid/assignment_without_types.pn
fn main() -> u8
{
	var x = 0;
	var y = x;
	var z = x;
	return: 23
}
